fixed icon not showing on focus

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -72,6 +72,7 @@
         width: calc(100% - 45px);
         
         i {
+          z-index: 1;
           top: 13px;
           transform: translateY(0);
         }
